RESOLVED FIXED256195
WebContent crash: Invalid message dispatched virtual void WebKit::RemoteScrollingCoordinatorProxyIOS::establishLayerTreeScrollingRelations(const RemoteLayerTreeHost &)
https://bugs.webkit.org/show_bug.cgi?id=256195
Summary WebContent crash: Invalid message dispatched virtual void WebKit::RemoteScrol...
Simon Fraser (smfr)
Reported 2023-05-01 21:13:35 PDT
Various websites (often involving video fullscreen) trigger a web content crash via the MESSAGE_CHECK in RemoteScrollingCoordinatorProxyIOS::establishLayerTreeScrollingRelations()
Attachments
Simon Fraser (smfr)
Comment 1 2023-05-01 21:13:44 PDT
Simon Fraser (smfr)
Comment 2 2023-05-01 21:25:04 PDT
EWS
Comment 3 2023-05-02 09:09:32 PDT
Committed 263590@main (77bb4783cf75): <https://commits.webkit.org/263590@main> Reviewed commits have been landed. Closing PR #13351 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.